@@ -54,14 +54,14 @@ def caller_package(level=2, caller_module=caller_module):
 def package_path(package):
     # computing the abspath is actually kinda expensive so we memoize
     # the result
-    prefix = getattr(package, '__bfg_abspath__', None)
+    prefix = getattr(package, '__abspath__', None)
     if prefix is None:
         prefix = pkg_resources.resource_filename(package.__name__, '')
         # pkg_resources doesn't care whether we feed it a package
         # name or a module name within the package, the result
         # will be the same: a directory name to the package itself
         try:
-            package.__bfg_abspath__ = prefix
+            package.__abspath__ = prefix
         except:
             # this is only an optimization, ignore any error
             pass
